Complete playable Android port baseline
Integrate the shared Severed Chains engine with Android GLES, audio, storage, image, lifecycle, and controller backends. Include the tested RG405V rendering, timing, save/load, controller, splash, icon, and quit fixes; remove obsolete probe code; and document the Android 0.9.0 build.